<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:backgroundTint="#fefefe"
    android:elevation="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/clItemLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="24dp"
        android:paddingHorizontal="12dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTimes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvTimeCasa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_timeC"
                android:textColor="@color/color_title"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDivisorTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/tv_divisor"
                android:textColor="@color/color_primary"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvTimeCasa"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTimeVisitante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/tv_timeV"
                android:textColor="@color/color_title"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvDivisorTimes"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSetor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clTimes">

            <TextView
                android:id="@+id/tvEstadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_estadio"
                android:textAllCaps="true"
                android:textColor="@color/color_third_text"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSetor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_setor_item"
                android:textAllCaps="true"
                android:textColor="@color/color_secondary_text"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvEstadio"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clSetor">

            <TextView
                android:id="@+id/tvCampeonato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_campeonato"
                android:textColor="@color/color_title"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvCifrao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_cifrao"
                    android:textColor="@color/color_primary"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvValor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_valor"
                    android:textColor="@color/color_primary"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/tvCifrao"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>


